-bug#0000761: RRA Input fields timespan and rows do not match the field size in the database
-bug#0000766: graph_tree_items ID field need to change to mediumint
-bug#0000769: Graph Export Is Not Sensitive to Actual RRA Used By Graphs
-bug#0000775: View SNMP Cache display nothing
-bug#0000779: When Viewing Thumbnails, Graph Text Should be Scaled Down
-bug#0000789: Use of Action In Image Button Incompatible with Newer Opera Browsers and HTML4
-bug#0000797: Graphs and Data Sources Dont Allow Filter to Search Multiple Fields
-bug: Use of the Data Source filter on the Graph Items Editor can clear the selected Data Source
-bug: SQL Query in Graphs was not set write causing graph failures in preview mode and other modes.
-bug: Setting a host template filter in devices, followed by moving off and then back on the page generated an error.
-bug: PHP 5.1 snmpwalks utilize the bulk method by default.  Therefore, prefer them over the bulkwalk binary.
-bug: Allow read_config_option to force a database refresh when one is wanted.
-bug: Fix issue with the script server where a function called where a data query without the <extra_args> does not work.
-bug: Make load average script compatible with Mac OS X systems.
-bug: Correct an issue where under certain circumstances, |query_ifSize| was being implemented as the maximum value for an rrd
-bug: Correct issue where dhtml caching was not working with expand hosts enabled
-bug: Add snmp retries to cacti's snmp functions
-bug: Once Graph Export has been enabled, cacti attempts to continue to run even after it has been disabled
-bug: Correct alphabetic sorting to be more natural

0.8.6h
-bug#0000383: Add more verbose RRDtool debug output from Graph Management.
-bug#0000522: Take 'oid_index_parse' into consideration when handling 'OID/REGEXP:' data query fields.
-bug#0000528: Allow template_import.php to return without error when XML file is invalid in PHP 4.4 and above.